--- a/OneMainWeb/site_specific/_css/demo.css
+++ b/OneMainWeb/site_specific/_css/demo.css
@@ -5,6 +5,8 @@ body {font-family: 'Open Sans', sans-serif;}
 .sidebar-nav .nav > li {display: inline-block; width: 100%;}
 .sidebar-nav .nav > li > a {display: inline-block; width: 100%; padding: 10px;}
 .sidebar-nav .nav > li > ul > li > a  {padding: 5px 20px; font-size: 13px;}
+.sidebar-nav .nav > li > ul > li > ul > li > a  {padding: 2px 25px; font-size: 11px;}
+
 h1 {margin-top: 0; font-size: 26px; margin-bottom: 20px; font-weight: bold;}
 h2 {margin-top: 0; font-size: 22px; margin-bottom: 20px; font-weight: bold;}
 h3 {margin-top: 0; font-size: 18px; margin-bottom: 20px; font-weight: bold;}
